@@ -5665,7 +5665,6 @@ body.mobile .tb-bg-video {
 	.epic-thumb .epic-thumb-quote blockquote {
 		color: #ffffff;
 		font-size: 40px;
-		font-style: normal;
 		line-height: 1.3;
 	}
 	.epic-thumb-quote blockquote small {
